--- a/pom.xml
+++ b/pom.xml
@@ -2,186 +2,204 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>07aa4c71-97cb-46c0-ad91-105eb50b78e8</groupId>
-	<artifactId>api-template</artifactId>
-    <version>1.0.0</version>
-    <packaging>mule-application</packaging>
-	<name>qr-api-template</name>
+	<groupId>b36179e5-1e57-48d5-9a20-65f0ac449a25</groupId>
+	<artifactId>template-api</artifactId>
+	<version>1.0.0</version>
+	<packaging>mule-application</packaging>
 
-    <description>API Template to speedup and standardize development activities</description>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <app.runtime>4.3.0</app.runtime>
-        <mule.maven.plugin.version>3.4.0</mule.maven.plugin.version>
-        <munit.version>2.1.3</munit.version>
-    </properties>
+	<name>template-api</name>
+	<description>This is a skeleton API that serves as a starting point for developers to build their API Led Use Cases</description>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<app.runtime>4.3.0</app.runtime>
+		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
+		<munit.version>2.1.5</munit.version>
+	</properties>
 	<build>
+		<resources>
+	        <resource>
+	            <directory>${basedir}/src/main/app</directory>
+	            <filtering>true</filtering>
+	        </resource>
+	        <resource>
+	            <directory>${basedir}/src/main/resources</directory>
+	            <filtering>true</filtering>
+	        </resource>
+	    </resources>
+		<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
-            <plugin>
-                <groupId>org.mule.tools.maven</groupId>
-                <artifactId>mule-maven-plugin</artifactId>
-                <version>${mule.maven.plugin.version}</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <cloudHubDeployment>
-                    	<objectStoreV2>true</objectStoreV2>
-                        <uri>${anypoint.base_uri}</uri>
-                        <muleVersion>${app.runtime}</muleVersion>
-                        <username>${anypoint.username}</username>
-                        <password>${anypoint.password}</password>
-                        <applicationName>${project.artifactId}-v1-${anypoint.environment}</applicationName>
-                        <businessGroup>${anypoint.businessgroup}</businessGroup>
-                        <workers>${anypoint.workers}</workers>
-                        <workerType>${anypoint.workertype}</workerType>
-                        <region>${anypoint.region}</region>
-                        <environment>${anypoint.environment}</environment>
-                        <deploymentTimeout>2000000</deploymentTimeout>
-                        <properties>
-                            <mule.env>${env}</mule.env>
-                            <anypoint.platform.client_id>${platform.client_id}</anypoint.platform.client_id>
-                            <anypoint.platform.client_secret>${platform.client_secret}</anypoint.platform.client_secret>
-                            <mule.vault.key>${mule.vault.key}</mule.vault.key>
-                        </properties>
-                    </cloudHubDeployment>
+			<plugin>
+				<groupId>org.mule.tools.maven</groupId>
+				<artifactId>mule-maven-plugin</artifactId>
+				<version>${mule.maven.plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<cloudHubDeployment>
+						<uri>${anypoint.platform.eu1.base_uri}</uri>
+						<muleVersion>${app.runtime}</muleVersion>
+						<username>${anypoint.user}</username>
+						<password>${anypoint.pw}</password>
+						<applicationName>${project.artifactId}</applicationName>
+						<environment>${anypoint.env}</environment>
+						<workerType>${anypoint.workertype}</workerType>
+						<workers>${anypoint.numberofworkers}</workers>
+						<properties>
+							<mule.env>${mule.env}</mule.env>
+							<encryption.key>${encryption.key}</encryption.key>
+							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
+							<anypoint.platform.base_uri>${anypoint.platform.eu1.base_uri}</anypoint.platform.base_uri>
+							<anypoint.platform.analytics_base_uri>${anypoint.platform.eu1.analytics_base_uri}</anypoint.platform.analytics_base_uri>
+							<anypoint.platform.config.analytics.agent.enabled>${anypoint.platform.analytics.agent.enabled}</anypoint.platform.config.analytics.agent.enabled>
+						</properties>
+						<region>${anypoint.region}</region>
+						<businessGroup>${anypoint.bg}</businessGroup>
+					</cloudHubDeployment>
+                <classifier>mule-application</classifier>
                 </configuration>
-            </plugin>
-            
-            <plugin>
-                <groupId>com.mulesoft.munit.tools</groupId>
-                <artifactId>munit-maven-plugin</artifactId>
-                <version>${munit.version}</version>
-                <executions>
-                    <execution>
-                        <id>test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                            <goal>coverage-report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <coverage>
-                        <runCoverage>true</runCoverage>
-                        <failBuild>true</failBuild>
-
-                        <requiredApplicationCoverage>80</requiredApplicationCoverage>
+			</plugin>
+			<plugin>
+				<groupId>com.mulesoft.munit.tools</groupId>
+				<artifactId>munit-maven-plugin</artifactId>
+				<version>${munit.version}</version>
+				<executions>
+					<execution>
+						<id>test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+							<goal>coverage-report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<coverage>
+						<runCoverage>true</runCoverage>
+						<failBuild>false</failBuild>
                         <formats>
-                            <format>html</format>
+                        	<format>html</format>
                         </formats>
-                        <ignoreFiles>							
-                        	<ignoreFile>error-handling.xml</ignoreFile>
-							<ignoreFile>common_functionality/common.xml</ignoreFile>							
-							<ignoreFile>common_functionality/common-http.xml</ignoreFile>	
-						</ignoreFiles>
-                    </coverage>
-                </configuration>
-            </plugin>
-    		</plugins>
+                        
+                        <requiredApplicationCoverage>50</requiredApplicationCoverage>
+                        <ignoreFlows>
+						  <ignoreFlow>api-template-api-console</ignoreFlow>
+					    </ignoreFlows>
+                        <ignoreFiles>
+						  <ignoreFile>global.xml</ignoreFile>
+						  <ignoreFile>soft-error-handler-flow.xml</ignoreFile>
+					    </ignoreFiles>
+					</coverage>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<dependencies>
-    	<dependency>
-            <groupId>org.mule.modules</groupId>
-            <artifactId>mule-apikit-module</artifactId>
-            <version>1.3.11</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-    	<dependency>
-            <groupId>org.mule.connectors</groupId>
-            <artifactId>mule-objectstore-connector</artifactId>
-            <version>1.1.3</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-    	<dependency>
-            <groupId>com.mulesoft.connectors</groupId>
-            <artifactId>mule-salesforce-connector</artifactId>
-            <version>10.1.1</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-    	<dependency>
-            <groupId>com.mulesoft.modules</groupId>
-            <artifactId>mule-secure-configuration-property-module</artifactId>
-            <version>1.2.2</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-    	<dependency>
-            <groupId>org.mule.connectors</groupId>
-            <artifactId>mule-jms-connector</artifactId>
-            <version>1.6.3</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-    	<dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>json-logger</artifactId>
-            <version>2.0.1</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-        <dependency>
+		<!-- Mule Maven plugins dependecy -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-site-plugin</artifactId>
+			<version>3.3</version>
+			<type>maven-plugin</type>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-install-plugin</artifactId>
+			<version>2.4</version>
+			<type>maven-plugin</type>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.7</version>
+			<type>maven-plugin</type>
+		</dependency>
+		<!--Dependency for Secure Properties Configuration -->
+		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>common-error-handler</artifactId>
 			<version>3.0.1</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>json-logger</artifactId>
+			<version>2.0.1</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
     	<dependency>
-            <groupId>com.mulesoft.connectors</groupId>
-            <artifactId>mule-amqp-connector</artifactId>
-            <version>1.6.0</version>
+            <groupId>com.mulesoft.munit</groupId>
+            <artifactId>munit-runner</artifactId>
+            <version>2.2.5</version>
             <classifier>mule-plugin</classifier>
+            <scope>test</scope>
         </dependency>
     	<dependency>
             <groupId>org.mule.modules</groupId>
-            <artifactId>mule-validation-module</artifactId>
-            <version>1.4.0</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-    	<dependency>
-            <groupId>com.mulesoft.connectors</groupId>
-            <artifactId>anypoint-mq-connector</artifactId>
-            <version>3.1.0</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-    	<dependency>
-            <groupId>org.mule.connectors</groupId>
-            <artifactId>mule-sockets-connector</artifactId>
-            <version>1.1.1</version>
+            <artifactId>mule-apikit-module</artifactId>
+            <version>1.3.13</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     	<dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-http-connector</artifactId>
-            <version>1.2.0</version>
+            <version>1.5.19</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+    	<dependency>
+            <groupId>com.mulesoft.modules</groupId>
+            <artifactId>mule-secure-configuration-property-module</artifactId>
+            <version>1.2.3</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>com.mulesoft.munit</groupId>
+            <artifactId>munit-tools</artifactId>
+            <version>2.2.5</version>
+            <classifier>mule-plugin</classifier>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
+	<!-- Mule Main repository -->
 	<repositories>
-          <repository>
-            <id>Exchange2</id>
-            <name>Anypoint Exchange V2</name>
-            <url>https://maven.eu1.anypoint.mulesoft.com/api/v2/maven</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>mulesoft-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>https://repository.mulesoft.org/releases/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-    
-    <pluginRepositories>
-        <pluginRepository>
-            <id>mulesoft-releases</id>
-            <name>mulesoft release repository</name>
-            <layout>default</layout>
-            <url>https://repository.mulesoft.org/releases/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
-
+		<repository>
+			<id>anypoint-exchange</id>
+			<name>Anypoint Exchange</name>
+			<url>https://maven.eu1.anypoint.mulesoft.com/api/v1/maven</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>mulesoft-releases</id>
+			<name>MuleSoft Releases Repository</name>
+			<url>https://repository.mulesoft.org/releases/</url>
+			<layout>default</layout>
+		</repository>
+		<!-- Maven2 repo -->
+		<repository>
+			<id>maven2</id>
+			<url>http://repo1.maven.org/maven2</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>mulesoft-releases</id>
+			<name>mulesoft release repository</name>
+			<layout>default</layout>
+			<url>https://repository.mulesoft.org/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
+	<distributionManagement>
+ 		<repository>
+      		<id>Repository</id>
+      		<name>Corporate Repository</name>
+      		<url>https://maven.anypoint.mulesoft.com/api/v1/organizations/${project.groupId}/maven</url>
+      		<layout>default</layout>
+    	</repository>
+  	</distributionManagement>
 </project>
