updates basepath to /v1

--- a/src/main/resources/properties/common.properties
+++ b/src/main/resources/properties/common.properties
@@ -1,7 +1,7 @@
 ### API Details - Common Props ###
 
 #Listener Config
-http.basePath=/api/v1/*
+http.basePath=/v1/*
 http.port=8081
 
 # This is overridden on deployment
