--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>07aa4c71-97cb-46c0-ad91-105eb50b78e8</groupId>
 	<artifactId>template-api</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
 	<name>template-api</name>
@@ -18,6 +18,12 @@
 		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
 		<munit.version>2.1.5</munit.version>
 	</properties>
+
+	<scm>
+		<developerConnection>scm:git:[REPLACE_WITH_REPO_URL]</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<build>
 		<resources>
 	        <resource>
@@ -92,6 +98,14 @@
 						  <ignoreFile>soft-error-handler-flow.xml</ignoreFile>
 					    </ignoreFiles>
 					</coverage>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M1</version>
+				<configuration>
+						<goals>install</goals>
 				</configuration>
 			</plugin>
 		</plugins>
