--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>[REPLACE_WITH_GROUP_ID]</groupId>
+	<groupId>{{GROUP_ID}}</groupId>
 	<artifactId>template-api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
@@ -20,7 +20,7 @@
 	</properties>
 
 	<scm>
-		<developerConnection>scm:git:[REPLACE_WITH_REPO_URL]</developerConnection>
+		<developerConnection>scm:git:{{REPO_URL}}</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -182,7 +182,7 @@
 		<repository>
 			<id>anypoint-exchange</id>
 			<name>Anypoint Exchange</name>
-			<url>https://maven.eu1.anypoint.mulesoft.com/api/v1/maven</url>
+			<url>https://maven.{{ANYPOINT_HOST}}/api/v1/maven</url>
 			<layout>default</layout>
 		</repository>
 		<repository>
